se realiza ajuste de errores graficos encontrados y errores que hacian cerrar la aplicacion ademas de ajustar el regresar ya que se estaban presentando errores ene este
Signed-off-by: alejandro parra <alejandroparral@gmail.com>

--- a/app/src/main/res/layout-land/list_credit_card_quote.xml
+++ b/app/src/main/res/layout-land/list_credit_card_quote.xml
@@ -39,8 +39,8 @@
             <com.google.android.material.textfield.MaterialAutoCompleteTextView
                 android:id="@+id/spCreditCardQCC"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1" />
+                android:layout_height="match_parent"
+                android:textAlignment="center" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
