--- a/app/src/main/res/layout-sw720dp/quote_credit_variable.xml
+++ b/app/src/main/res/layout-sw720dp/quote_credit_variable.xml
@@ -144,7 +144,8 @@
             android:id="@+id/months"
             android:paddingLeft="@dimen/autocomplete_padding_left"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:textAlignment="center"/>
         </com.google.android.material.textfield.TextInputLayout>
 
 
