--- a/app/src/main/res/layout/fragment_taxes.xml
+++ b/app/src/main/res/layout/fragment_taxes.xml
@@ -43,6 +43,7 @@
                         android:layout_width="match_parent"
                         android:paddingStart="20dp"
                         android:layout_height="wrap_content"
+                        android:textAlignment="center"
                         />
                     </com.google.android.material.textfield.TextInputLayout>
 
@@ -57,7 +58,8 @@
                         android:id="@+id/spKindTaxes"
                         android:paddingStart="20dp"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"/>
+                        android:layout_height="wrap_content"
+                        android:textAlignment="center"/>
                     </com.google.android.material.textfield.TextInputLayout>
 
                     <com.google.android.material.textfield.TextInputLayout
@@ -71,7 +73,8 @@
                         android:id="@+id/spMonthTaxes"
                         android:paddingStart="20dp"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content" />
+                        android:layout_height="wrap_content"
+                        android:textAlignment="center"/>
 
                     </com.google.android.material.textfield.TextInputLayout>
 
