--- a/app/src/main/res/layout-sw720dp/buys_credit_card.xml
+++ b/app/src/main/res/layout-sw720dp/buys_credit_card.xml
@@ -10,9 +10,9 @@
 <com.google.android.material.card.MaterialCardView
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:cardCornerRadius="12dp"
-    app:strokeWidth="1dp"
-    app:cardElevation="2dp">
+    app:cardCornerRadius="@dimen/radius_corner"
+    app:strokeWidth="@dimen/stroke_with"
+    app:cardElevation="@dimen/card_elevator">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
