--- a/app/src/main/res/layout/buy_wallet_credit_card.xml
+++ b/app/src/main/res/layout/buy_wallet_credit_card.xml
@@ -59,7 +59,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:paddingLeft="@dimen/margin_start_input_layout"
-            android:hint="@string/assing_credit_Card" />
+            android:hint="@string/assing_credit_Card"
+            android:textAlignment="center"/>
         </com.google.android.material.textfield.TextInputLayout>
     </LinearLayout>
 
