--- a/app/src/main/res/layout/cash_advance_credit_card.xml
+++ b/app/src/main/res/layout/cash_advance_credit_card.xml
@@ -52,7 +52,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginLeft="@dimen/margin_start_input_layout"
-            android:hint="@string/assing_credit_Card" />
+            android:hint="@string/assing_credit_Card"
+            android:textAlignment="center"/>
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
