--- a/app/src/main/res/layout/fragment_credit_card_setting.xml
+++ b/app/src/main/res/layout/fragment_credit_card_setting.xml
@@ -43,7 +43,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingStart="20dp"
-                android:layout_weight="1" />
+                android:layout_weight="1"
+                android:textAlignment="center"/>
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
@@ -57,7 +58,8 @@
                 android:id="@+id/spTypeCCS"
                 android:paddingStart="20dp"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:textAlignment="center"/>
             </com.google.android.material.textfield.TextInputLayout>
 
 
