--- a/app/src/main/res/layout/fragment_list_tax_credit_card.xml
+++ b/app/src/main/res/layout/fragment_list_tax_credit_card.xml
@@ -2,14 +2,13 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/frameLayout3"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="@dimen/margin_border_layout"
-    tools:context=".ListTaxCreditCard">
+    tools:context="./controller/ListTaxCreditCard">
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -21,30 +20,14 @@
         android:id="@+id/pbTaxTCC"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        />
+        android:keepScreenOn="true"
+       android:indeterminate="true" />
 
     <LinearLayout
         android:id="@+id/llMainTTCC"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-
-
-
-        <TextView
-            android:id="@+id/lbTitleTCC"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
-            android:text="@string/taxs_credit_card"
-            android:textAlignment="center"
-            android:textSize="20sp"
-            android:textStyle="bold" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/lbNameTCC"
@@ -58,14 +41,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:completionThreshold="1"
+                android:textAlignment="center"
                 android:clickable="true"
                 />
 
             </com.google.android.material.textfield.TextInputLayout>
-
-        </LinearLayout>
-
-
 
             <LinearLayout
                 android:layout_width="match_parent"
