--- a/app/src/main/res/layout/quote_credit_variable.xml
+++ b/app/src/main/res/layout/quote_credit_variable.xml
@@ -123,7 +123,8 @@
             android:id="@+id/months"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingLeft="@dimen/autocomplete_padding_left"/>
+            android:paddingLeft="@dimen/autocomplete_padding_left"
+            android:textAlignment="center"/>
 
 
         </com.google.android.material.textfield.TextInputLayout>
