--- a/app/src/main/res/layout-sw720dp/quote_credit_variable.xml
+++ b/app/src/main/res/layout-sw720dp/quote_credit_variable.xml
@@ -113,7 +113,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/space_min"
             app:icon="@drawable/ic_baseline_cleaning_services_24"
-            android:layout_weight="4"
+            android:layout_weight="2"
             android:text="@string/clear" />
 
         <com.google.android.material.button.MaterialButton
@@ -221,11 +221,19 @@
         app:layout_constraintTop_toBottomOf="@+id/lyCapitalValue"
         tools:layout_editor_absoluteX="294dp">
 
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btnAmortizationQCV"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="2"
+            android:layout_margin="@dimen/space_min"
+            app:icon="?android:attr/actionModeWebSearchDrawable"
+            android:text="@string/amortization"/>
 
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btnSaveVariable"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/space_min"
             android:layout_weight="1"
