--- a/app/src/main/res/layout/quote_credit_variable.xml
+++ b/app/src/main/res/layout/quote_credit_variable.xml
@@ -95,7 +95,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:layout_margin="@dimen/space_min"
+                android:padding="@dimen/space_min"
+                android:layout_marginEnd="@dimen/space_min"
                 app:icon="@drawable/ic_baseline_cleaning_services_24"
                 android:text="@string/clear" />
 
@@ -144,7 +145,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/money_hint"
+            android:hint="@string/money_hint"
             android:textAlignment="center"/>
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -161,7 +162,7 @@
             android:id="@+id/tvInterestValueList"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/money_hint"
+            android:hint="@string/money_hint"
             android:textAlignment="center"/>
 
         </com.google.android.material.textfield.TextInputLayout>>
@@ -180,7 +181,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/money_hint"
+            android:hint="@string/money_hint"
             android:textAlignment="center" />
 
         </com.google.android.material.textfield.TextInputLayout>
@@ -194,12 +195,19 @@
         app:layout_constraintBottom_toBottomOf="parent"
         tools:layout_editor_absoluteX="294dp">
 
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btnAmortizationQCV"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:layout_marginEnd="@dimen/space_min"
+            app:icon="?android:attr/actionModeWebSearchDrawable"
+            android:text="@string/amortization"/>
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btnSaveVariable"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/space_min"
             android:layout_weight="1"
             app:icon="@android:drawable/ic_menu_save"
             android:text="@string/save" />
