--- a/app/src/main/res/layout-land/quote_credit_variable.xml
+++ b/app/src/main/res/layout-land/quote_credit_variable.xml
@@ -108,7 +108,8 @@
             android:id="@+id/btnClear"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="3"
+            android:layout_weight="2"
+            android:padding="@dimen/space_min"
             android:layout_margin="@dimen/space_min"
             android:text="@string/clear"
             app:icon="@drawable/ic_baseline_cleaning_services_24" />
@@ -233,10 +234,18 @@
         app:layout_constraintBottom_toBottomOf="parent"
         tools:layout_editor_absoluteX="294dp">
 
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btnAmortizationQCV"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:layout_margin="@dimen/space_min"
+            app:icon="?android:attr/actionModeWebSearchDrawable"
+            android:text="@string/amortization"/>
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btnSaveVariable"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/space_min"
             android:layout_weight="1"
