--- a/app/src/main/res/layout-sw720dp/quote_credit.xml
+++ b/app/src/main/res/layout-sw720dp/quote_credit.xml
@@ -114,8 +114,9 @@
             android:id="@+id/btnClear"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="@dimen/space_min"
-            android:layout_weight="3"
+            android:padding="@dimen/space_min"
+            android:layout_marginEnd="@dimen/space_min"
+            android:layout_weight="2"
             android:text="@string/clear"
             app:icon="@drawable/ic_baseline_cleaning_services_24" />
 
@@ -163,7 +164,14 @@
         tools:layout_editor_absoluteX="1dp">
 
 
-
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btnAmortizationQCF"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="2"
+            android:layout_margin="@dimen/space_min"
+            app:icon="?android:attr/actionModeWebSearchDrawable"
+            android:text="@string/amortization"/>
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btnSave"
