--- a/app/src/main/res/layout/bought_item_list.xml
+++ b/app/src/main/res/layout/bought_item_list.xml
@@ -56,10 +56,18 @@
             android:textStyle="bold" />
 
         <ImageButton
+            android:id="@+id/btnAmortizationItemLCCS"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:background="@color/green_background"
+            android:layout_marginEnd="@dimen/space_min"
+            app:srcCompat="@android:drawable/ic_menu_search" />
+
+        <ImageButton
             android:id="@+id/btnDeleteItemLCCS"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="#04FFFFFF"
+            android:layout_height="match_parent"
+            android:background="@color/green_background"
             app:srcCompat="@drawable/ic_baseline_delete_24" />
 
     </LinearLayout>
