Eliminacion del titulo de las paginas ya que se pone por defecto en la barra de navegacion
Signed-off-by: alejandro parra <alejandroparral@gmail.com>

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -196,7 +196,8 @@
     <fragment
         android:id="@+id/boughWalletController"
         android:name="co.japl.android.myapplication.finanzas.controller.BoughWalletController"
-        android:label="BoughWalletController" />
+        android:label="@string/bough_wallet"
+        tools:layout="@layout/buy_wallet_credit_card"/>
     <fragment
         android:id="@+id/amortizationTableFragment"
         android:name="co.japl.android.myapplication.finanzas.controller.AmortizationTableFragment"
