--- a/app/src/main/res/layout/fragment_g_drive_connect.xml
+++ b/app/src/main/res/layout/fragment_g_drive_connect.xml
@@ -4,19 +4,21 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="@dimen/padding_page"
     tools:context=".finanzas.controller.GDriveConnectFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        app:cardCornerRadius="12dp"
-        app:strokeWidth="1dp"
-        app:cardElevation="2dp">
+
+        app:cardCornerRadius="@dimen/radius_corner"
+        app:strokeWidth="@dimen/stroke_with"
+        app:cardElevation="@dimen/card_elevator">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:padding="@dimen/space_min"
         android:orientation="vertical">
 
         <TextView
@@ -36,6 +38,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Logout" />
+
+        <com.google.android.gms.common.SignInButton
+            android:id="@+id/signLogin"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            />
     </LinearLayout>
     </com.google.android.material.card.MaterialCardView>
 </FrameLayout>
