--- a/app/src/main/res/layout-land/bought_item_list.xml
+++ b/app/src/main/res/layout-land/bought_item_list.xml
@@ -85,11 +85,18 @@
             android:textAlignment="textEnd"
             android:textColor="@android:color/primary_text_dark"
             android:textStyle="italic" />
+            <ImageButton
+                android:id="@+id/btnAmortizationItemLCCS"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:background="@color/green_background"
+                android:layout_marginEnd="@dimen/space_min"
+                app:srcCompat="@android:drawable/ic_menu_search" />
 
         <ImageButton
             android:id="@+id/btnDeleteItemLCCS"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="0"
             android:background="#01FFFFFF"
             app:srcCompat="@drawable/ic_baseline_delete_24" />
