--- a/app/src/main/res/layout-land/quote_credit_save_item_list.xml
+++ b/app/src/main/res/layout-land/quote_credit_save_item_list.xml
@@ -74,12 +74,20 @@
             android:textColor="@android:color/primary_text_dark"
             android:textSize="18sp"
             android:textStyle="bold" />
+        <ImageButton
+            android:id="@+id/btnAmortization"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="0"
+            android:background="@color/green_background"
+            app:srcCompat="@android:drawable/ic_menu_search" />
 
         <ImageButton
             android:id="@+id/btnDelete"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="0"
+            android:background="@color/green_background"
             app:srcCompat="@drawable/ic_baseline_delete_24" />
 
     </LinearLayout>
